--- a/Chits_New/PAWebconsole/Web.config
+++ b/Chits_New/PAWebconsole/Web.config
@@ -9,7 +9,8 @@
 -->
 <configuration>
   <connectionStrings>
-    <add name="DBServer" connectionString="Server=localhost;User Id=root; Password=kamflex; Database=chits; Pooling=True;Min Pool Size=0;Max Pool Size=50" providerName="MySql.Data.MySqlClient"/>
+    <!--<add name="DBServer" connectionString="Server=localhost;User Id=root; Password=kamflex; Database=chits; Pooling=True;Min Pool Size=0;Max Pool Size=50" providerName="MySql.Data.MySqlClient"/>-->
+    <add name="DBServer" connectionString="Server=localhost;User Id=root; Password=kamflex; Database=chits_latest; Pooling=True;Min Pool Size=0;Max Pool Size=50" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <system.web>
     <!-- 
