--- a/Chits_New/PALibrary/PALibrary.csproj
+++ b/Chits_New/PALibrary/PALibrary.csproj
@@ -37,7 +37,9 @@
   <ItemGroup>
     <Compile Include="Library\Component\AccountsManager.cs" />
     <Compile Include="Library\Component\ATKTManager.cs" />
+    <Compile Include="Library\Component\ChitsBiddingManager.cs" />
     <Compile Include="Library\Component\ChitsManager.cs" />
+    <Compile Include="Library\Component\ChitsParticipateManager.cs" />
     <Compile Include="Library\Component\CityManager.cs" />
     <Compile Include="Library\Component\CustomerManager.cs" />
     <Compile Include="Library\Component\FixedDepositManager.cs" />
@@ -51,7 +53,9 @@
     <Compile Include="Library\Component\VouchersManager.cs" />
     <Compile Include="Library\DAO\AccountsDAO.cs" />
     <Compile Include="Library\DAO\ATKTDAO.cs" />
+    <Compile Include="Library\DAO\ChitsBiddingDAO.cs" />
     <Compile Include="Library\DAO\ChitsDAO.cs" />
+    <Compile Include="Library\DAO\ChitsParticipateDAO.cs" />
     <Compile Include="Library\DAO\CityDAO.cs" />
     <Compile Include="Library\DAO\CustomerDAO.cs" />
     <Compile Include="Library\DAO\FixedDepositDAO.cs" />
@@ -67,7 +71,9 @@
     <Compile Include="Library\DAO\VouchersDAO.cs" />
     <Compile Include="Library\Exception\PAException.cs" />
     <Compile Include="Library\Model\ATKTInfo.cs" />
+    <Compile Include="Library\Model\ChitsBiddingInfo.cs" />
     <Compile Include="Library\Model\ChitsInfo.cs" />
+    <Compile Include="Library\Model\ChitsParticipateInfo.cs" />
     <Compile Include="Library\Model\CityInfo.cs" />
     <Compile Include="Library\Model\CustomerInfo.cs" />
     <Compile Include="Library\Model\DayBookInfo.cs" />
