--- a/Chits_New/PALibrary/PALibrary.csproj
+++ b/Chits_New/PALibrary/PALibrary.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Library\Component\ChitsBiddingManager.cs" />
     <Compile Include="Library\Component\ChitsManager.cs" />
     <Compile Include="Library\Component\ChitsParticipateManager.cs" />
+    <Compile Include="Library\Component\ChitsReportManager.cs" />
     <Compile Include="Library\Component\ChitsTransManager.cs" />
     <Compile Include="Library\Component\CityManager.cs" />
     <Compile Include="Library\Component\CustomerManager.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Library\Model\ChitsBiddingInfo.cs" />
     <Compile Include="Library\Model\ChitsInfo.cs" />
     <Compile Include="Library\Model\ChitsParticipateInfo.cs" />
+    <Compile Include="Library\Model\ChitsReportInfo.cs" />
     <Compile Include="Library\Model\ChitsTransInfo.cs" />
     <Compile Include="Library\Model\CityInfo.cs" />
     <Compile Include="Library\Model\CustomerInfo.cs" />
